<resources>
    <string name="app_name">planITgo-finalProject</string>
    <string name="intro_text">Easily add and manage countries and attractions to create a personalized travel plan. Keep track of all your must-see destinations and organize your trip with ease.</string>
    <string name="get_started">Get Started!</string>
    <string name="explore_the_world_with_us">Explore the <font color="#3f95ec">World</font> with us</string>
    <string name="create_your_attraction">Create Your Attraction</string>
    <string name="enter_attraction_name">Enter attraction name</string>
    <string name="enter_address">Enter address</string>
    <string name="add_description">Add description</string>
    <string name="opening_and_closing_hours">Opening and closing hours</string>
    <string name="opening_time">Opening time</string>
    <string name="closing_time">Closing time</string>
    <string name="upload_image">Upload Image</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="price">Price</string>
    <string name="explore">Explore </string>
    <string name="your_custom_attraction">Your Custom Attraction</string>
    <string name="you_haven_t_added_any_custom_attractions_yet">You haven\'t added any custom attractions yet.</string>
    <string name="suggestions_attraction">Suggestions Attraction</string>
    <string name="no_attractions_found">No attractions found.</string>
    <string name="add_icon">add icon</string>
    <string name="back_icon">back icon</string>
    <string name="view_attractions">View Attractions</string>
    <string name="select_destination">Select Destination</string>
    <string name="search_city">Search City</string>
    <string name="open_and_closing_time">Open And Closing Time</string>
    <string name="description">Description</string>
    <string name="my_favorite">My Favorite</string>
    <string name="custom_attraction">Custom Attraction</string>
    <string name="no_favorite_attractions_have_been_selected_yet">No favorite attractions have been selected yet.</string>
    <string name="no_favorite_custom_attractions_have_been_selected_yet">No favorite custom attractions have been selected yet.</string>
    <string name="translate_mate">Translate Mate</string>
    <string name="enter_to_translate">enter to translate</string>
    <string name="source_language">Source Language</string>
    <string name="swap_button">swap button</string>
    <string name="target_language">Target Language</string>
    <string name="loading_language">Loading Language...</string>
    <string name="translate">Translate</string>
    <string name="my_trip">My Trip</string>
    <string name="translator">Translator</string>
    <string name="favorite">Favorite</string>
    <string name="select_time">Select Time</string>
    <string name="please_enter_opening_time">please enter opening time</string>
    <string name="please_enter_closing_time">please enter closing time</string>
    <string name="attraction_added_to_favorite">attraction added to favorite</string>
    <string name="loading">Loading...</string>
    <string name="destination_added_successfully">Destination added successfully</string>
    <string name="are_you_sure_you_want_to_delete_the_country">Are you sure you want to delete the country</string>
    <string name="the_deletion_will_include_both_the_country_and_the_attractions_if_they_exist_are_you_sure_you_want_to_delete">The deletion will include both the country and the attractions if they exist are you sure you want to delete</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="no_description_found">No Description found</string>
    <string name="no_hours_found">No Hours found</string>
    <string name="attraction_remove_from_favorite">attraction remove from favorite</string>
    <string name="enter_text_to_translate">Enter Text To translate</string>
    <string name="the_destination_already_exists_in_the_list">The destination already exists in the list</string>
</resources>