<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp"
    android:background="@drawable/translate_bg_img"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.planitgo_finalproject.ui.Translate.TranslateFragment">
    <TextView
        android:id="@+id/translateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate_mate"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:shadowColor="@color/blue"
        android:shadowDy="2"
        android:shadowDx="2"
        android:shadowRadius="3"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/editTextTranslate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/enter_to_translate"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/translateTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/translatedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTranslate"/>
    <android.widget.Button
        android:id="@+id/sourceLanguageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_language"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:padding="10dp"
        android:background="@drawable/dark_blue_bg_btn"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/translateBtn"/>
    <ImageButton
        android:id="@+id/translateDirectionBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_arrow_forward_24"
        android:background="@drawable/dark_blue_btn_no_fill"
        android:contentDescription="@string/swap_button"
        app:layout_constraintStart_toEndOf="@id/sourceLanguageBtn"
        app:layout_constraintEnd_toStartOf="@id/targetLanguageBtn"
        app:layout_constraintTop_toTopOf="@id/sourceLanguageBtn"
        app:layout_constraintBottom_toBottomOf="@id/sourceLanguageBtn"/>
    <android.widget.Button
        android:id="@+id/targetLanguageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/target_language"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:background="@drawable/dark_blue_bg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/translateBtn"/>
    <ProgressBar
        android:id="@+id/translatePb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/loadingLanguageTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_language"
        android:textSize="17sp"
        android:textColor="@color/dark_blue"
        android:visibility="gone"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/translatePb"/>
    <android.widget.Button
        android:id="@+id/translateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:textAllCaps="false"
        android:background="@drawable/dark_blue_btn_no_fill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>