<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.planitgo_finalproject.ui.attraction.AttractionFragment"
    android:background="@color/light_gray"
    android:padding="32dp">
    <ImageButton
        android:id="@+id/AttractionsBackBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:elevation="2dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:background="@drawable/white_bg"
        android:contentDescription="@string/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainTitle"
        app:layout_constraintBottom_toBottomOf="@+id/mainTitle"/>
    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/explore"
        android:shadowRadius="4"
        android:shadowDy="3"
        android:shadowDx="3"
        android:shadowColor="@color/dark_blue"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AttractionsBackBtn"
        app:layout_constraintEnd_toEndOf="parent"/>
    <android.widget.SearchView
        android:id="@+id/searchView"
        android:background="@drawable/search_background"
        android:iconifiedByDefault="false"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTitle"
        app:queryHint="Search"/>
    <TextView
        android:id="@+id/customAttractionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_custom_attraction"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        />
    <TextView
        android:id="@+id/explainTextAttCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_haven_t_added_any_custom_attractions_yet"
        android:fontFamily="@font/poppins_regular"
        android:textSize="17sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/attractionCustomRv"
        app:layout_constraintEnd_toEndOf="@id/attractionCustomRv"
        app:layout_constraintTop_toTopOf="@id/attractionCustomRv"
        app:layout_constraintBottom_toBottomOf="@id/attractionCustomRv"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attractionCustomRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customAttractionTV"/>
    <TextView
        android:id="@+id/suggestionsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestions_attraction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attractionCustomRv"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="8dp"/>
    <ProgressBar
        android:id="@+id/progressBarAttraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/attractionApiRv"
        app:layout_constraintEnd_toEndOf="@id/attractionApiRv"
        app:layout_constraintTop_toTopOf="@id/attractionApiRv"
        app:layout_constraintBottom_toBottomOf="@id/attractionApiRv"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/explainTextAttApi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_attractions_found"
        android:fontFamily="@font/poppins_regular"
        android:textSize="17sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/attractionApiRv"
        app:layout_constraintEnd_toEndOf="@id/attractionApiRv"
        app:layout_constraintTop_toTopOf="@id/attractionApiRv"
        app:layout_constraintBottom_toBottomOf="@id/attractionApiRv"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attractionApiRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suggestionsTV"
        app:layout_constraintBottom_toTopOf="@id/AddAttractionBtn"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AddAttractionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        android:contentDescription="@string/add_icon"
        style="@style/CustomFABTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>