<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.planitgo_finalproject.ui.favorite.FavoriteFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp"
    android:background="@color/light_gray">
    <TextView
        android:id="@+id/favoriteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_favorite"
        android:gravity="center"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_semibold"
        android:shadowRadius="3"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowColor="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Spinner
        android:id="@+id/destinationSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:tooltipText="Select Destination"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favoriteTitle"/>
    <TextView
        android:id="@+id/favoriteSuggestionsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestions_attraction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/destinationSpinner"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/explainTextFavoriteAttApi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_favorite_attractions_have_been_selected_yet"
        android:textSize="17sp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/favoriteAttractionApiRv"
        app:layout_constraintEnd_toEndOf="@id/favoriteAttractionApiRv"
        app:layout_constraintTop_toTopOf="@id/favoriteAttractionApiRv"
        app:layout_constraintBottom_toBottomOf="@id/favoriteAttractionApiRv"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoriteAttractionApiRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.30"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoriteSuggestionsTV"
        app:layout_constraintBottom_toTopOf="@id/favoriteCustomAttractionTV"/>
    <TextView
        android:id="@+id/favoriteCustomAttractionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_attraction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favoriteAttractionApiRv"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/explainTextFavoriteAttCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_favorite_custom_attractions_have_been_selected_yet"
        android:textSize="17sp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/favoriteAttractionCustomRv"
        app:layout_constraintEnd_toEndOf="@id/favoriteAttractionCustomRv"
        app:layout_constraintTop_toTopOf="@id/favoriteAttractionCustomRv"
        app:layout_constraintBottom_toBottomOf="@id/favoriteAttractionCustomRv"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoriteAttractionCustomRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoriteCustomAttractionTV"/>
</androidx.constraintlayout.widget.ConstraintLayout>